--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://nodedevops.herokuapp.com</title>
-<meta http-equiv="refresh" content="0; URL=https://nodedevops.herokuapp.com">
-<link rel="canonical" href="https://nodedevops.herokuapp.com">
+<title>Redirecting to http://www.minhan-tran.fr</title>
+<meta http-equiv="refresh" content="0; URL=http://www.minhan-tran.fr">
+<link rel="canonical" href="http://www.minhan-tran.fr">
